[package]
name = "ch13-Errors-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"