[package]
name = "ch15-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
tokio = { version = "1.10.0", features = ["full"] }